Fix contact form checkboxes on iPhone

--- a/web/app/themes/brian-thompson/assets/styles/components/_forms.scss
+++ b/web/app/themes/brian-thompson/assets/styles/components/_forms.scss
@@ -117,6 +117,7 @@
       }
       input[type="checkbox"]:checked + .wpcf7-list-item-label:before {
         background: $blue;
+        border: 1px solid $blue;
       }
       label {
         cursor: pointer;
